Lógica para migração de dados

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,9 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+DATA_MIGRATION_ACTIVE=true
+DATA_MIGRATION_MD5=743819683bd9fd4e63c8a863114b4ffd
+
 LOGO_EMPRESA=
 LOGO_LOCAL=false
 
