Definição de engine do mysql com InnoDB

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ APP_DOMAIN=http://central.vexmobile.com.br
 ADMIN_URL=http://admin.vexmobile.com.br
 
 DB_CONNECTION=mysql
+DB_ENGINE="InnoDB"
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=
