--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 APP_NAME="Central VEX"
+APP_TEST=false
 APP_ENV=production
 APP_KEY=base64:7CJJRilT7FMLEXm6sLJQbD461cGcDQLseifkf4Ief7M=
 APP_SSL=false
@@ -38,6 +39,8 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+AJAX_MD5=
 
 DATA_MIGRATION_ACTIVE=true
 DATA_MIGRATION_MD5=743819683bd9fd4e63c8a863114b4ffd
